fix(style): Fix case selected transform overlap of zindex modal

--- a/src/less/board.less
+++ b/src/less/board.less
@@ -17,8 +17,7 @@
 	}
 
 	.selected {
-		-webkit-transform: rotateY(180deg);
-		transition: all linear 1s; 
+		-webkit-animation: rotateClean 1s;
 		background-color: #534C4C;
 	}
 
